--- a/ASPMVC_EF_Music/Views/Shared/_LandingpageLayout.cshtml
+++ b/ASPMVC_EF_Music/Views/Shared/_LandingpageLayout.cshtml
@@ -16,11 +16,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Music Home", "Index", "Music", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Music", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*@Html.ActionLink("linktext", "actionname", "controllername");*@
                     <li>@Html.ActionLink("About", "About", "Music")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Music")</li>
                 </ul>
