Add controller, datepicker

--- a/ASPMVC_EF_Music/Views/Album/Edit.cshtml
+++ b/ASPMVC_EF_Music/Views/Album/Edit.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.releasedate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.releasedate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.releasedate, new { htmlAttributes = new { @class = "form-control datepicker" } })
                 @Html.ValidationMessageFor(model => model.releasedate, "", new { @class = "text-danger" })
             </div>
         </div>
