--- a/ASPMVC_EF_Music/Views/Person/Create.cshtml
+++ b/ASPMVC_EF_Music/Views/Person/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ASPMVC_EF_Music.Album
+﻿@model ASPMVC_EF_Music.Person
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Album</h4>
+        <h4>Person</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,10 +24,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.releasedate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.dayOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.releasedate, new { htmlAttributes = new { @class = "form-control datepicker" } })
-                @Html.ValidationMessageFor(model => model.releasedate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.dayOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.dayOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
 
