--- a/ASPMVC_EF_Music/Views/Person/Edit.cshtml
+++ b/ASPMVC_EF_Music/Views/Person/Edit.cshtml
@@ -1,20 +1,22 @@
-﻿@model ASPMVC_EF_Music.Album
+﻿@model ASPMVC_EF_Music.Person
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Album</h4>
+        <h4>Person</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -24,16 +26,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.releasedate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.dayOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.releasedate, new { htmlAttributes = new { @class = "form-control datepicker" } })
-                @Html.ValidationMessageFor(model => model.releasedate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.dayOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.dayOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
