--- a/ASPMVC_EF_Music/Views/Shared/_LandingpageLayout.cshtml
+++ b/ASPMVC_EF_Music/Views/Shared/_LandingpageLayout.cshtml
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My Music Application</p>
+            <p>&copy; @DateTime.Now.Year - Programmeren .NET</p>
         </footer>
     </div>
 
