--- a/ASPMVC_EF_Music/Views/Person/Create.cshtml
+++ b/ASPMVC_EF_Music/Views/Person/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.dayOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dayOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.dayOfBirth, new { htmlAttributes = new { @class = "form-control datepicker" } })
                 @Html.ValidationMessageFor(model => model.dayOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
