--- a/ASPMVC_EF_Music/Views/Album/Tracks.cshtml
+++ b/ASPMVC_EF_Music/Views/Album/Tracks.cshtml
@@ -1,4 +1,5 @@
-﻿@model DAL.Track_AlbumCreateList
+﻿@using DAL;
+@model Track_AlbumCreateList
 
 @{
     ViewBag.Title = "Tracks";
@@ -58,9 +59,20 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.track_album.TrackId, "TrackId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">                    
-                    @Html.DropDownList("TrackId",new SelectList(ViewBag.TrackAlbumSelectList,"Value", "Text"), htmlAttributes: new { @class = "form-control" })
-                    @*@Html.EditorFor(model => model.track_album.TrackId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <div class="col-md-10"> 
+                    
+                    @if (@ViewBag.TrackAlbumSelectList.Count == 0)
+                    {
+                        <p>You can't add any more tracks.</p>
+                    }
+                    else
+                    {
+                        @Html.DropDownList("TrackId", new SelectList(ViewBag.TrackAlbumSelectList, "Value", "Text"), htmlAttributes: new { @class = "form-control" })
+                    }
+                    
+                                       
+                    
+
                     @Html.ValidationMessageFor(model => model.track_album.TrackId, "", new { @class = "text-danger" })
 
                 </div>
