--- a/ASPMVC_EF_Music/Views/Album/Tracks.cshtml
+++ b/ASPMVC_EF_Music/Views/Album/Tracks.cshtml
@@ -22,10 +22,10 @@
                <p>TrackSequence: @(t_a.TrackSequence)</p>
                <p>Length: @t_a.Track.length</p>
 
-                @*@Html.ActionLink("Remove", "Removetracklink", "Album",
+                @Html.ActionLink("Edit", "EditTrack", "Album",
                  new { id = t_a.Id },
                  new { @class = "btn btn-xs btn-default" }
-                )*@
+                )
 
                @using (Html.BeginForm("RemoveTrackLink", "Album", new { id = t_a.Id }, FormMethod.Post,null))
                {
@@ -52,9 +52,10 @@
                 @Html.LabelFor(model => model.track_album.TrackSequence, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.track_album.TrackSequence,
-                   new { htmlAttributes = new { @class = "form-control", Name = "TrackSequence" } })
+                   new { htmlAttributes = new { @class = "form-control", Name = "TrackSequence", Value="1" } })
                     @Html.ValidationMessageFor(model => model.track_album.TrackSequence, "", new { @class = "text-danger" })
                 </div>
+                <span class="text-primary">Must be greater then 0.</span>
             </div>
 
             <div class="form-group">
