--- a/ASPMVC_EF_Music/Views/Track/Index.cshtml
+++ b/ASPMVC_EF_Music/Views/Track/Index.cshtml
@@ -37,6 +37,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=track.Id }) |
             @Html.ActionLink("Details", "Details", new { id=track.Id }) |
+            @Html.ActionLink("Genres","Index","Track_Genre", new { id = track.Id }, null) |
             @Html.ActionLink("Delete", "Delete", new { id=track.Id })
         </td>
     </tr>
