--- a/ASPMVC_EF_Music/Views/Track_Person_Role/Create.cshtml
+++ b/ASPMVC_EF_Music/Views/Track_Person_Role/Create.cshtml
@@ -23,13 +23,14 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @Html.HiddenFor(model=>model.TrackId)
+        @*<div class="form-group">
             @Html.LabelFor(model => model.TrackId, "TrackId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("TrackId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TrackId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.RoleId, "RoleId", htmlAttributes: new { @class = "control-label col-md-2" })
