--- a/ASPMVC_EF_Music/Views/Role/Index.cshtml
+++ b/ASPMVC_EF_Music/Views/Role/Index.cshtml
@@ -19,14 +19,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Role.role, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Role.role, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Role.role, new { htmlAttributes = new { @class = "form-control", minlength = "1" } })
                 @Html.ValidationMessageFor(model => model.Role.role, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" onClick="return document.getElementById('Role_role').value  !== ''" />
             </div>
         </div>
     </div>
