--- a/ASPMVC_EF_Music/Views/Role/Edit.cshtml
+++ b/ASPMVC_EF_Music/Views/Role/Edit.cshtml
@@ -10,17 +10,16 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Role</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        <input type="hidden" name="Role.Id" value="@Model.Id"/>
 
         <div class="form-group">
             @Html.LabelFor(model => model.role, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control", Name= "Role.role", minlength="1" } })
                 @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
             </div>
         </div>
