--- a/ASPMVC_EF_Music/Views/Music/Contact.cshtml
+++ b/ASPMVC_EF_Music/Views/Music/Contact.cshtml
@@ -5,10 +5,10 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Meistraat<br />
+    Antwerpen, ANT<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    000.555.0100
 </address>
 
 <address>
